--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Professeur</string>
+    <string name="app_name">Exam</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Professeur App</string>
@@ -7,8 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_prof">Professeur</string>
-    <string name="menu_specialite">Specialite</string>
+    <string name="menu_test">Test</string>
+    <string name="menu_employe">Employe</string>
+    <string name="menu_by_servies">Employe By Services</string>
+
+    <string name="empty">Empty</string>
 
     <array name="specialites">
         <item>informatique</item>
